基础模块优化

--- a/CommonLibrary/src/main/res/values/app_config.xml
+++ b/CommonLibrary/src/main/res/values/app_config.xml
@@ -18,6 +18,7 @@
     <!--数据库表-->
     <string-array name="tables">
         <item>com.xiaozhu.library.entity.DownloadEntity</item>
+        <item>com.xiaozhu.library.entity.CountEntity</item>
     </string-array>
 
 </resources>
