--- a/CommonLibrary/src/main/res/values/color.xml
+++ b/CommonLibrary/src/main/res/values/color.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--APP颜色值-->
-    <color name="title_bar_color">@color/dodgerblue</color>
+    <color name="title_bar_color">@color/common_color</color>
     <color name="title_bar_text">@color/white</color>
     <color name="window_bg">@color/light_yellow</color>
     <color name="common_color">@color/dodgerblue</color>
@@ -11,6 +11,11 @@
     <!--指示器颜色-->
     <color name="select_indicator_color">@color/common_color</color>
     <color name="normal_indicator_color">@color/gray</color>
+    <!--tabLayout颜色-->
+    <color name="tab_text_color">@color/light_yellow</color>
+    <color name="tab_background">@color/common_color</color>
+    <color name="tab_text_select_color">@color/white</color>
+    <color name="tab_indicator_color">@color/orange</color>
 
     <!--常用颜色值-->
     <color name="black_20">#20000000</color>
