--- a/CommonLibrary/src/main/res/layout/common_tab_layout.xml
+++ b/CommonLibrary/src/main/res/layout/common_tab_layout.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/tab_layout_height"
-        android:background="@color/common_color"
+        android:background="@color/tab_background"
         android:orientation="horizontal">
 
         <android.support.design.widget.TabLayout
